# study-gnuc-cppnote

./: .gitignore  README.md  meson.build  test.tmp
boosttest/: README.md  main.cpp  meson.build
boosttest/include/: mem.h  util.h
boosttest/src/: asiotest.cpp  assign.cpp  compression.cpp  coroutines.cpp  current_func.cpp  files.cpp  higherorder.cpp  mem.cpp  mem_manage.cpp  meson.build  move.cpp  multicriteria.cpp  option.cpp  paralleltest.cpp  phoenix.cpp  posixtime.cpp  searchtree.cpp  str.cpp  tcpclient.cpp  tcpip.cpp  tcpserver.cpp  udpclient.cpp  udpserver.cpp  udpserverasync.cpp  udpservercorout.cpp  util.cpp
cpptest/: main.cpp  meson.build
cpptest/include/: main.h  study.h
cpptest/src/: meson.build  study.cpp
ffi/: main.c  mainffi.c  meson.build
ffi/include/: somelib.h
ffi/src/: meson.build  somelib.c
numerical/: README.md  main.c  meson.build
pthread/: README.md  main.c  main.cpp  meson.build
pthread/include/: atm.h  exit.h  llist.h  llst.h  multi.h  pthread.h  rdwr.h  tpool.h
pthread/src/: atm_svr.c  atm_svr_serial.c  cvsimple.c  exit.c  llist.c  llist_threads_rw.c  llst.c  matrix_mul.c  matrix_mul_thread.c  meson.build  multi.c  process_mutex.c  rdwr.c  tpool.c
system/: README.md  main.cpp  meson.build
system/src/: meson.build
