
message('boost src directory')

sources=files(['mem.cpp', 'util.cpp'])

option_sources = files(['option.cpp'])

currentfunc_srcs = files(['current_func.cpp'])

memmanage_srcs = files(['mem_manage.cpp'])

string_srcs = files(['str.cpp'])

move_srcs = files(['move.cpp'])

assign_srcs = files(['assign.cpp'])

searchtree_srcs = files(['searchtree.cpp'])

multicriteria_srcs = files(['multicriteria.cpp'])

highorder_srcs = files(['higherorder.cpp'])

phoenix_srcs = files(['phoenix.cpp'])

posixtime_srcs = files(['posixtime.cpp'])
