
message('hi src directory in pthread')

sources=files(['llst.c', 'multi.c'])

exit_srcs=files(['exit.c'])

atm_svr_srcs=files(['atm_svr_serial.c'])

atm_svr_thread =  files(['atm_svr.c'])

matrix_mult_srcs = files(['matrix_mul.c'])

matrix_mult_thread_srcs = files(['matrix_mul_thread.c'])

llist_srcs=files(['llist.c'])

process_shared_mutex_srcs = files(['process_mutex.c'])

cvsimple_srcs = files([
    'cvsimple.c'
])